green test : 새로운 출석 등록 시 출석 객체 갱신 TDD